# pydantic_schemaorg

./: README.md  pyproject.toml
pydantic_schemaorg/: AMRadioChannel.py  APIReference.py  Abdomen.py  AboutPage.py  AcceptAction.py  Accommodation.py  AccountingService.py  AchieveAction.py  Action.py  ActionAccessSpecification.py  ActionStatusType.py  ActivateAction.py  ActivationFee.py  ActiveActionStatus.py  ActiveNotRecruiting.py  AddAction.py  AdministrativeArea.py  AdultEntertainment.py  AdultOrientedEnumeration.py  AdvertiserContentArticle.py  AerobicActivity.py  AggregateOffer.py  AggregateRating.py  AgreeAction.py  Airline.py  Airport.py  AlbumRelease.py  AlcoholConsideration.py  AlignmentObject.py  AllWheelDriveConfiguration.py  AllergiesHealthAspect.py  AllocateAction.py  AmpStory.py  AmusementPark.py  AnaerobicActivity.py  AnalysisNewsArticle.py  AnatomicalStructure.py  AnatomicalSystem.py  AndroidPlatform.py  Anesthesia.py  (+1324 more)
pydantic_schemaorg/ISO8601/: ISO8601Date.py  errors.py  test_ISO8601Date.py
src/: main.py  models.py  schema_org.py  test_classes.py
